--- a/AdminLTE/appsettings.json
+++ b/AdminLTE/appsettings.json
@@ -1,8 +1,7 @@
-﻿  {
+﻿{
   "ConnectionStrings": {
     //"DefaultConnection": "Server=otentik\\sql2014;Database=adminLTE;user=sa;password=rahasiapastiterjaga10;MultipleActiveResultSets=true"
-    "DefaultConnection": "Data Source=DESKTOP-JF59ROH;Integrated Security=SSPI;Initial Catalog=Test"
-    //"Data Source=TURRHH04;Initial Catalog=adminLTE;Integrated Security=True"
+    "DefaultConnection": "Data Source=TURRHH04;Initial Catalog=adminLTE;Integrated Security=True"
   },
   "Logging": {
     "IncludeScopes": false,
