--- a/AdminLTE/appsettings.json
+++ b/AdminLTE/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     //"DefaultConnection": "Server=otentik\\sql2014;Database=adminLTE;user=sa;password=rahasiapastiterjaga10;MultipleActiveResultSets=true"
-    "DefaultConnection": "Data Source=TURRHH04;Initial Catalog=adminLTE;Integrated Security=True"
+    "DefaultConnection": "Data Source=TURRHH04;Initial Catalog=Test2;Integrated Security=True"
   },
   "Logging": {
     "IncludeScopes": false,
